# path2enum

./: Cargo.toml  LICENSE.md  License.md  README.md
.github/workflows/: count_tests.yml
src/: lib.rs
tests/: magic.rs
